<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.app.androidtesting.user_mvvm.presentation.loginVM.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:id="@+id/appbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/signupColor"
            android:tooltipText="Login Page"
            app:title="Login Page"
            app:titleTextColor="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Login Page"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white">

            </androidx.appcompat.widget.AppCompatTextView>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/back"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="40dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#949494"
            android:padding="10dp"
            android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/back"
            android:orientation="vertical"
            android:padding="20dp">



            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appIcon"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/login"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userLoginEmailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:text="@={viewModel.userEmailID}"
                app:error="@{viewModel.emailError}"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:gravity="left|center_horizontal"
                android:background="@drawable/shapeemail"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                app:errorTextColor="@android:color/holo_red_dark"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:padding="15dp"
             />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </Space>


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shapeemail"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="left|center_horizontal"
                android:hint="Password"
                android:padding="15dp"
                android:text="@={viewModel.userPassword}"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:error="@{viewModel.passwordError}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/loginRemimberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember Me"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:checked="true"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Forget Password"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                    android:drawablePadding="6dp"
                    android:padding="4dp"/>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Log In"
                android:shadowColor="@android:color/transparent"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shapelogin"
                android:textStyle="bold"
                android:onClick="@{() -> viewModel.onLoginButtonClicked()}" />
            />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:shadowColor="@android:color/transparent"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shapesignup"
                android:textColor="@color/white"/>

        </LinearLayout>

        </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.constraintlayout.widget.ConstraintLayout>
</layout>