...
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shapesignup"
                    android:padding="15dp"
                    android:shadowColor="@android:color/transparent"
                    android:text="Signup"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shapesignup"
                    android:padding="15dp"
                    android:shadowColor="@android:color/transparent"
                    android:text="Forgot Password"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFragmentExample"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
